<resources>
    <!--系统通用-->
    <string name="action_settings">Settings</string>
    <string name="app_name">信号工技师考试</string>
    <string name="main_title">信号工技师考试</string>
    <string name="loading">正在加载……</string>
    <string name="waiting_no_net">网络连接失败 请检查网络！</string>
    <string name="exit_app">再按一次后退键退出应用程序</string>
    <string name="all_subjects">所有题目</string>
    <string name="test_introduce">考试说明</string>
    <string name="edit_user_info">报名表编辑</string>
    <string name="edit_info">编辑资料</string>
    <string name="type_test">考试</string>
    <string name="online_sign">考试报名</string>
    <string name="online_sign_preview">考试报名预览</string>
    <string name="random_test">随机50道题目</string>
    <string name="all_test">所有163道题目</string>
    <string name="real_test">正式考试</string>
    <string name="real_name">考生姓名</string>
    <string name="name_pinyin">姓名拼音</string>
    <string name="test_type">考试类别</string>
    <string name="examinee_sex">性别</string>
    <string name="id_card">身份证号</string>
    <string name="birthday">出生日期</string>
    <string name="mobile_telephone">联系电话</string>
    <string name="a_operation_number">A类操作证号</string>
    <string name="radio_call_sign">电台呼号</string>
    <string name="qq">QQ</string>
    <string name="email">电子邮件</string>
    <string name="nation">民族</string>
    <string name="degree_education">文化程度</string>
    <string name="postal_address">邮寄地址</string>
    <string name="address_street">街道门牌</string>
    <string name="postal_address_postcode">邮政编码</string>
    <string name="upload_one_inch_img">上传电子免冠照片</string>
    <string name="upload_a_test_cerifi_img">上传A类考试证书</string>
    <string name="upload_card_img">上传电子版身份证</string>
    <string name="upload_residence_img">上传居住证</string>
    <string name="wrong_test_list">错题列表</string>
    <string name="save_text">保存</string>
    <string name="confirm_text">确定</string>
    <string name="cancle_text">取消</string>
    <string name="modify">修改</string>
    <string name="submit">提交</string>
    <string name="clear_text">清除</string>
    <string name="left_second_text">剩余%1$s秒</string>
    <string name="last_subject">上一题</string>
    <string name="mext_subject">下一题</string>
    <string name="hand_in_subject">交卷</string>
    <string name="handing_in_subject">正在交卷，请稍候…</string>
    <string name="view_subject">查看考题</string>
    <string name="view_wrog_subject">查看错题</string>
    <string name="subject_result">考试结果</string>
    <string name="reform">提示</string>
    <string name="have_selected">已答</string>
    <string name="un_selected">未答</string>
    <string name="answer_error">答错</string>
    <string name="more_text">更多</string>
    <string name="test_status">状态：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="info_null_error">所有信息都不能为空哦</string>
    <string name="hand_in_reform">确定要交卷么?</string>
    <string name="upload_to_server">正在提交</string>
    <string name="select_test_type">选择考试类型</string>
    <string name="select_sex_type">选择性别</string>
    <string name="select_time">选择时间</string>
    <string name="continue_test">继续考试</string>
    <string name="input_test_type_first">请选择考试类别</string>
    <string name="input_name_first">请先输入考生姓名</string>
    <string name="input_cerid_first">请输入正确的身份证号</string>
    <string name="input_telephone_first">请输入正确的手机号</string>
    <string name="input_right_email">请输入正确的邮箱</string>
    <string name="input_right_qq">请输入正确的qq号</string>
    <string name="input_right_postcode">请输入正确的邮政编码</string>
    <string name="upload_a_test_img">请上传A类考试证书</string>
    <string name="upload_a_operation_number">请输入A类操作证号</string>
    <string name="input_right_ipaddress">请输入正确的服务器地址</string>
    <string name="uncommit_user_info">当前信息尚未提交，确认要退出么？</string>
    <string name="unsave_user_info">当前信息尚未保存，确认要退出么？</string>
    <string name="clear_server_info">确定清除当前设置的服务器地址么？</string>
    <string name="unset_server_info">您还未设置服务器地址！</string>
    <string name="one_inch_pixel_error">一寸照照片的分辨率应该不低于400×300像素，不高于2000×1500像素！</string>
    <string name="commit_verify_info">确认要提交审核么？</string>
    <string name="back_forbidden_hand">您还未提交试卷，确定要退出吗？</string>
    <string name="unanswer_all_subject">本次考试还有题目未作答，确认交卷么？</string>
    <string name="test_exit_app_unregular">由于你在考试期间违规退出app，当前系统已默认帮你交卷，且你无法继续答题！</string>
    <string name="test_time_arrive">考试时间到，请点击确定按钮交卷！</string>
    <string name="prompt_text">考试期间不得退出本考试系统，否则将提交试卷，现在进行考试？</string>
    <string name="to_examine_text">考试报名已提交，正在审核，请稍等！</string>
    <string name="verify_passeed">考试报名审核已通过，可以查看但不能修改！</string>
    <string name="verify_unpasseed">考试报名审核未通过，请重新修改提交！</string>
    <string name="verify_to_examine">考试报名已提交，正在审核，可以查看但不能修改！</string>
    <string name="have_attend_test">目前不能报名！</string>
    <string name="over_time_handin">考试时间超过%1$s分钟才能交卷哦！</string>
    <string name="test_to_examine">考试报名已提交，正在审核，请审核通过后在进入考试！</string>
    <string name="test_un_commit">您还未提交报名信息，请选择考试报名提交个人信息并且审核通过后再参加考试！</string>
    <string name="b_test_un_commit">参加B类型考试，需要重新报名。您还未提交报名信息，请选择考试报名提交个人信息并且审核通过后再参加考试！</string>
    <string name="repeat_test_error">目前不能考试！</string>
    <string name="repeat_test_signup_error">您已经参加过考试了了，不能再报名！</string>
    <string name="exit_error">当前正在考试，退出app超过%1$s秒后自动交卷，为避免您的提前交卷，请尽快回到app考试页面！</string>
    <string name="answer_right_total">答对题目：%1$s道</string>
    <string name="test_number_text">第%1$s题</string>
    <string name="right_answer">正确答案：%1$s</string>
    <string name="test_passed">通过</string>
    <string name="test_unpassed">未通过</string>
    <string name="test_result">考试成绩</string>
    <string name="loading_content">请稍候…</string>

</resources>
