<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/common_matchwhstyle"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <!-- 考试结果界面 -->
    <include
        android:id="@+id/test_title_lin"
        layout="@layout/top_title_bar" />

    <anloneytest.com.test.views.ReboundScrollView
        style="@style/common_matchwhstyle"
        android:scrollbars="none">

        <LinearLayout
            style="@style/common_matchwhstyle"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_introduce_text"
                style="@style/common_wrapstyle"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:textColor="@color/blue_btn_color"
                tools:text="@string/test_result" />

            <!--<RelativeLayout-->
                <!--style="@style/common_whstyle"-->
                <!--android:layout_margin="15dp">-->

                <!--<ImageView-->
                    <!--style="@style/common_wrapstyle"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:src="@drawable/icon_rest_result_bg_img" />-->

                <!--<TextView-->
                    <!--android:id="@+id/test_result_text"-->
                    <!--style="@style/common_wrapstyle"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:textColor="@color/blue_btn_color"-->
                    <!--android:textSize="40sp"-->
                    <!--tools:text="@string/test_passed" />-->

            <!--</RelativeLayout>-->

            <TextView
                android:id="@+id/test_result_right_text"
                style="@style/grey_text_style"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/blue_btn_color"
                tools:text="@string/answer_right_total" />

            <Button
                android:id="@+id/wrong_test_list_btn"
                style="@style/result_button_click_style"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="30dp"
                android:text="@string/wrong_test_list" />
            <Button
                android:id="@+id/signup_confirm_btn"
                style="@style/result_button_click_style"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="30dp"
                android:text="@string/confirm_text" />
        </LinearLayout>
    </anloneytest.com.test.views.ReboundScrollView>
</LinearLayout>